--- a/SMS_Spam_Filtering/Readme
+++ b/SMS_Spam_Filtering/Readme
@@ -1,1 +1,16 @@
+SmsSpam_Filtering
+An implementation of a Spam Filter in Python that uses the Naive Bayes and KNN Model to classify emails as spam or ham.
 
+Classifiers:-
+Naive Bayes:
+
+BernoulliNB
+MultinomialNB
+GaussianNB
+KNN:
+
+With k=5
+Feature Extraction:
+
+CountVectorizer
+TfidfVectorizer
